tests/ui/error-codes/E0433.rs
fn main () {
    let map = NonExistingMap::new(); //~ ERROR E0433
}
